plugins {
    id 'java'
    id 'idea'
    alias(libs.plugins.gitVersion)
    alias(libs.plugins.shadow) apply false
}

def git = versionDetails()
def tag = git.lastTag.substring(1)
if (System.getenv('GITHUB_ACTIONS') == 'true') {
    if (System.getenv('GITHUB_WORKFLOW') == 'Release') {
        version = tag
    } else if (System.getenv('PULL_REQUEST')) {
        version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT.pr.${System.getenv('PULL_REQUEST')}.${System.getenv('GITHUB_RUN_NUMBER')}"
    } else {
        version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT.${System.getenv('GITHUB_RUN_NUMBER')}"
    }
} else {
    version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT"
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'com.gradleup.shadow'

    version = "${rootProject.version}+${project.name}"

    idea {
        module {
            excludeDirs += file('./run/')
        }
    }

    // If you add something to the repositories block
    // add it to the settings.gradle file for Dependabot
    repositories {
        maven {
            name = 'ParchmentMC'
            url = 'https://maven.parchmentmc.org'
        }
        maven {
            name = 'Neoforged'
            url = 'https://maven.neoforged.net/releases/'
        }
        maven {
            name = 'TerraformersMC'
            url = 'https://maven.terraformersmc.com/'
        }
        maven {
            name = 'Shedaniel'
            url = 'https://maven.shedaniel.me/'
        }
        exclusiveContent {
            forRepository {
                maven {
                    name = 'Modrinth'
                    url = 'https://api.modrinth.com/maven'
                }
            }
            filter {
                includeGroup 'maven.modrinth'
            }
        }
    }

    jar {
        archiveClassifier = 'dev'
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 21
    }

    processResources {
        filesMatching(['fabric.mod.json', 'META-INF/neoforge.mods.toml']) {
            expand version: project.version,
                    fabric_loader_version: libs.fabricLoader.get().version,
                    fabric_api_version: libs.fabricApi.get().version,
                    architectury_api_version: libs.architecturyApiFabric.get().version,
                    jade_fabric_version: libs.jadeFabric.get().version,
                    cloth_config_version: libs.clothConfigFabric.get().version,
                    minecraft_version: libs.minecraft.get().version,
                    neoforge_version: libs.neoForge.get().version,
                    jade_neoforge_version: libs.jadeNeoForge.get().version
        }
    }

    shadowJar {
        configurations = [project.configurations.shadow]
    }
}

allprojects {
    apply plugin: 'checkstyle'

    group = 'org.mcaccess'
    base.archivesName = 'minecraft-access'

    dependencies {
        checkstyle libs.checkstyle
    }

    checkstyle {
        toolVersion = libs.checkstyle.get().version
    }
}
